<resources>
    // Registration screen
    <string name="app_name">BudgetBuddy</string>
    <string name="login">Login</string>
    <string name="user_hint">Username…</string>
    <string name="password_hint">Password…</string>
    <string name="password_confirmation">Confirm password…</string>
    <string name="email">Email…</string>
    <string name="signed_up">Already signed up?</string>
    <string name="log_in_from_register"><u>Click on me to log in!</u></string>

    // Login screen
    <string name="remember">Remember me</string>
    <string name="not_signed_up">Not signed up yet?</string>
    <string name="register_from_login"><u>Click on me to register!</u></string>
    <string name="register">Sign up</string>

    // MainActivity screen
    <string name="dashboard">Dashboard</string>
    <string name="monthlyLimit">Spending limit</string>
    <string name="moneySpent">Money spent</string>
    <string name="estimatedExpense">Est. Expense</string>
    <string name="moneySaved">Money saved</string>
    <string name="None">None</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    // Custom Nav Drawer screen
    <string name="profile">Profile</string>
    <string name="finances">Finances</string>
    <string name="spending_limit">Spending limit</string>
    <string name="graph">Graphs</string>
    <string name="statistics">Generated statistics</string>
    <string name="settings">Settings</string>
    <string name="FAQ">FAQ</string>
    <string name="about">About us</string>
    <string name="contact">Contact</string>
    <string name="copyright">Copyright xxx 20xx-20xx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" />
    <string name="default_web_client_id">"227161700693-42aos6l5iqot65nkdtp0dpbqhterjjn5.apps.googleusercontent.com"</string>
    <string name="not_available">N/A</string>
    <string name="budgetBuddy">BudgetBuddy</string>
    <string name="totalExpense">Total Expense</string>
</resources>