<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_gery"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_test_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@color/shaded_blue">

            <TextView
                android:id="@+id/loginTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_username"
                android:inputType="text"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/user_dark"
                android:drawablePadding="8dp"
                android:hint="@string/user_hint"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="40dp"
                android:autofillHints="name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/password_dark"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="20dp"
                android:autofillHints="password"/>

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/login_btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/not_signed_up"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/register_from_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_from_login"
        android:textSize="18sp"
        android:textColor="@color/shaded_blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Or log in with google"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/googleImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/google_icon"/>



</LinearLayout>