<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_test_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_username"
                android:inputType="text"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/user_dark"
                android:drawablePadding="8dp"
                android:hint="@string/user_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="40dp"
                android:autofillHints="name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email_address"
                android:inputType="textEmailAddress"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/email_dark"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/password_dark"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="20dp"
                android:autofillHints="password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password_confirm"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_test_background"
                android:drawableStart="@drawable/password_dark"
                android:drawablePadding="8dp"
                android:hint="@string/password_confirmation"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="20dp"
                android:autofillHints="password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/login_btn"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHighlight="@color/purple"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/signed_up"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_from_register"
        android:textSize="18sp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        />

</LinearLayout>